chore: add linting/formatting (ESLint+Prettier, Spotless) and format codebase
- FE: angular-eslint + Prettier config, npm scripts, lint/format all clean
- BE: Spotless (google-java-format) + Maven wrapper; reformat all Java
- Root .editorconfig; README code-style section
- No logic changes; FE build + BE compile verified green

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>